--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <nav class="nav" role="navigation" aria-label="Main">
         <a href="#about">About</a>
         <a href="#itinerary">Itinerary</a>
+        <a href="#aurora">Aurora</a>
         <a href="#gallery">Gallery</a>
         <a href="#contact" class="cta">RSVP</a>
       </nav>
@@ -38,13 +39,18 @@
           <p class="lead">This is our special invitation — together we'll explore Iceland, Lofoten & Tromsø: waterfalls, fjords, cozy cabins, and the magical <strong>Northern Lights</strong>.</p>
           <div class="actions">
             <a href="#itinerary" class="btn">See full itinerary</a>
-            <a href="#gallery" class="btn ghost">View highlights</a>
+            <a href="#aurora" class="btn ghost">Aurora highlights</a>
             <a href="itinerary.pdf" class="btn link" target="_blank" rel="noopener">⬇️ Download itinerary (PDF)</a>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <!-- FAMILY BANNER -->
+  <p class="family-banner">
+    💙 This adventure is for <strong>Sneha & Babita</strong> — a family gift of love, laughter, and unforgettable memories under the Northern Lights 🌌
+  </p>
 
   <!-- ABOUT -->
   <section id="about" class="section light" aria-labelledby="about-heading">
@@ -76,7 +82,7 @@
       <article class="itinerary-card stay">
         <div class="date">27–30 Oct</div>
         <h3>🏨 Reykjavík — Airbnb (3 nights)</h3>
-        <p><strong>Stay:</strong> Airbnb — Hrefnugata 8, Reykjavík 105</p>
+        <p><strong>Airbnb:</strong> Hrefnugata 8, Reykjavík 105</p>
         <p><strong>Notes:</strong> Near Reykjavik Art Museum Kjarvalsstaðir</p>
         <p><strong>Booked via:</strong> Airbnb</p>
       </article>
@@ -85,9 +91,7 @@
       <article class="itinerary-card stay">
         <div class="date">30 Oct – 1 Nov</div>
         <h3>🏨 Seljalandsfoss Horizons (2 nights)</h3>
-        <p><strong>Stay:</strong> Seljalandsfoss Horizons — Standard Apartment</p>
-        <p><strong>Location:</strong> Eystrasaljaland, Rangárþing eystra, 861 Iceland</p>
-        <p><strong>Booked via:</strong> Expedia</p>
+        <p><strong>Stay:</strong> Standard Apartment</p>
         <p class="note">Base for South Coast waterfalls (Seljalandsfoss, Skógafoss).</p>
       </article>
 
@@ -95,8 +99,7 @@
       <article class="itinerary-card stay">
         <div class="date">1 Nov – 2 Nov</div>
         <h3>🏨 Hótel Berg (1 night)</h3>
-        <p><strong>Stay:</strong> Hótel Berg ★★★★★</p>
-        <p><strong>Location:</strong> Keflavik City Center, Reykjanesbær, Iceland</p>
+        <p><strong>Location:</strong> Keflavik City Center, Reykjanesbær</p>
         <p><strong>Booked via:</strong> Goibibo</p>
       </article>
 
@@ -116,7 +119,6 @@
         <h3>🏡 Lofoten — Ramberg (3 nights) • 🌌 Northern Lights</h3>
         <p><strong>Stay:</strong> Home in Ramberg (Airbnb)</p>
         <p><strong>Host:</strong> Susanne Grenness</p>
-        <p><strong>Booked via:</strong> Airbnb</p>
         <p class="note">Lofoten offers dramatic coastal scenery and dark skies — great for Aurora watching.</p>
       </article>
 
@@ -149,7 +151,7 @@
           <li><strong>Booking ID:</strong> GOFLISTAGXLV5835743</li>
           <li><strong>Ticket No.:</strong> 220-55189665132</li>
         </ul>
-        <p class="muted">If you prefer these booking numbers hidden on the public site, I can remove them or place them behind a private link.</p>
+        <p class="muted">If you prefer these booking numbers hidden on the public page, I can remove them or place them behind a private link.</p>
       </article>
 
       <!-- 8 Nov return -->
@@ -163,71 +165,139 @@
     </div>
   </section>
 
-  <!-- DESTINATION PANELS (Iceland / Lofoten / Tromsø) -->
+  <!-- AURORA HIGHLIGHTS -->
+  <section id="aurora" class="section aurora-section" aria-labelledby="aurora-heading">
+    <div class="wrap">
+      <h2 id="aurora-heading">🌌 Aurora Highlights</h2>
+      <p class="muted">The Northern Lights are the heart of our adventure — here are 3 magical places where we’ll chase them together.</p>
+
+      <div class="aurora-grid">
+        <div class="aurora-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=1200');"></div>
+          <h4>🌌 Tromsø — Northern Lights Capital</h4>
+          <p class="muted">Best chance to see Auroras dancing over Arctic skies.</p>
+        </div>
+        <div class="aurora-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?w=1200');"></div>
+          <h4>🌌 Lofoten — Aurora over Cabins</h4>
+          <p class="muted">The iconic Hamnøy cabins glowing under the green lights.</p>
+        </div>
+        <div class="aurora-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1508264165352-258a6f5f0a7a?w=1200');"></div>
+          <h4>🌌 Iceland — Aurora over Waterfalls</h4>
+          <p class="muted">Aurora Borealis shining above Icelandic waterfalls.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- DESTINATION: ICELAND -->
   <section id="iceland" class="section dest-section" aria-labelledby="iceland-heading">
     <div class="wrap">
-      <h2 id="iceland-heading">🇮🇸 Iceland — Famous Places to Explore</h2>
+      <h2 id="iceland-heading">🇮🇸 Iceland — Places to Go</h2>
       <p class="muted">Blue Lagoon, Golden Circle, Seljalandsfoss, Skógafoss, Jökulsárlón and more.</p>
+
       <div class="grid-2 showcase dest-grid">
         <div class="showcase-card">
           <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1519677100203-a0e668c92439?w=1200');"></div>
           <h4>🏊 Blue Lagoon</h4>
-          <p class="muted">Relax in the geothermic spa — mineral-rich waters.</p>
+          <p class="muted">Relax in geothermal spa — mineral-rich waters.</p>
         </div>
-        <div class="showcase-card">
-          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1521295121783-8a321d551ad2?w=1200');"></div>
-          <h4>🏞 Seljalandsfoss & Skógafoss</h4>
-          <p class="muted">Iconic waterfalls on the South Coast.</p>
-        </div>
-        <div class="showcase-card">
-          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1523978591478-c753949ff840?w=1200');"></div>
-          <h4>🧊 Jökulsárlón Glacier Lagoon</h4>
-          <p class="muted">Floating icebergs and black sand beaches nearby.</p>
-        </div>
+
         <div class="showcase-card">
           <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1557800636-894a64c1696f?w=1200');"></div>
           <h4>🗺 Golden Circle</h4>
-          <p class="muted">Thingvellir, Geysir, and Gullfoss — classic Iceland loop.</p>
+          <p class="muted">Thingvellir, Geysir, Gullfoss — classic Iceland loop.</p>
+        </div>
+
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1523978591478-c753949ff840?w=1200');"></div>
+          <h4>🧊 Glacier Lagoon (Jökulsárlón)</h4>
+          <p class="muted">Floating icebergs and black sand beaches nearby.</p>
+        </div>
+
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?w=1200');"></div>
+          <h4>🕳 Caves & Basalt</h4>
+          <p class="muted">Explore sea caves and volcanic formations.</p>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- DESTINATION: LOFOTEN (with Places to Go list) -->
   <section id="lofoten" class="section dest-section light" aria-labelledby="lofoten-heading">
     <div class="wrap">
-      <h2 id="lofoten-heading">🏡 Lofoten — What to see</h2>
-      <p class="muted">Ramberg beach, fishing villages, dramatic fjords and great Aurora viewing.</p>
+      <h2 id="lofoten-heading">🏡 Lofoten — Places to Go</h2>
+      <p class="muted">Ramberg, Reine, Haukland, Kvalvika and more — dramatic fjords & fishing villages.</p>
+
       <div class="grid-2 showcase dest-grid">
         <div class="showcase-card">
           <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=1200');"></div>
-          <h4>🌌 Ramberg / Beaches</h4>
-          <p class="muted">Rugged coastline and wide beaches — great for photos.</p>
+          <h4>Reine</h4>
+          <p class="muted">Iconic fishing village — base for boat rides & winter kayaking.</p>
         </div>
+
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?w=1200');"></div>
+          <h4>Haukland Beach</h4>
+          <p class="muted">White sand & turquoise water — beautiful walks.</p>
+        </div>
+
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1533689485324-6d7b9d5f8d57?w=1200');"></div>
+          <h4>Kvalvika Beach</h4>
+          <p class="muted">Hike-in beach with dramatic cliffs.</p>
+        </div>
+
         <div class="showcase-card">
           <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1473186505569-9c61870c11f9?w=1200');"></div>
-          <h4>🏘 Fishing Villages</h4>
-          <p class="muted">Colorful rorbuer (fishermen cabins) & local life.</p>
+          <h4>Henningsvær</h4>
+          <p class="muted">Art galleries and the famous football field on the skerry.</p>
         </div>
       </div>
+
+      <h3 style="margin-top:20px;color:var(--primary)">More places in Lofoten</h3>
+      <ul class="places-list">
+        <li>Orcas (seasonal whale watching)</li>
+        <li>Hamnøy — iconic rorbuer (photo spot)</li>
+        <li>Reinebringen hike (panoramic view)</li>
+        <li>Ryten & Mannen hikes</li>
+        <li>Eggum — sunsets & viewpoints</li>
+        <li>Trollfjord cruise & Holdøya</li>
+        <li>Svolvær — town & galleries</li>
+      </ul>
     </div>
   </section>
 
+  <!-- DESTINATION: TROMSØ -->
   <section id="tromso" class="section dest-section" aria-labelledby="tromso-heading">
     <div class="wrap">
-      <h2 id="tromso-heading">🌌 Tromsø — Highlights</h2>
-      <p class="muted">Arctic Cathedral, Tromsø bridge, fjord cruises, and excellent Northern Lights tours.</p>
+      <h2 id="tromso-heading">🌌 Tromsø — Highlights & Places</h2>
+      <p class="muted">Arctic Cathedral, Fjellheisen cable car, fjord cruises, and world-class Northern Lights tours.</p>
+
       <div class="grid-2 showcase dest-grid">
         <div class="showcase-card">
           <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1519125323398-675f0ddb6308?w=1200');"></div>
-          <h4>🌉 Tromsø Bridge & City</h4>
-          <p class="muted">Explore the city, cafés, and museums.</p>
+          <h4>Fjellheisen Cable Car</h4>
+          <p class="muted">Panoramic views over Tromsø and the fjords.</p>
         </div>
+
         <div class="showcase-card">
           <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?w=1200');"></div>
-          <h4>🚤 Fjord Views</h4>
-          <p class="muted">Short cruises and scenic viewpoints near Tromsø.</p>
+          <h4>Arctic Cathedral & City</h4>
+          <p class="muted">City life, cafes, museums, and the iconic church.</p>
         </div>
       </div>
+
+      <h3 style="margin-top:20px;color:var(--primary)">Other Tromsø experiences</h3>
+      <ul class="places-list">
+        <li>Northern Lights Tours</li>
+        <li>Nordic Sauna at Pust</li>
+        <li>Sledding & winter activities</li>
+        <li>Magic Bar (local nightlife)</li>
+        <li>Whale watching excursions (seasonal)</li>
+      </ul>
     </div>
   </section>
 
@@ -249,7 +319,7 @@
         <div class="showcase-card">
           <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1523978591478-c753949ff840?w=1200');"></div>
           <h4>🏔 Waterfalls & Glaciers</h4>
-          <p class="muted">Seljalandsfoss, Skógafoss, and glacier lagoons.</p>
+          <p class="muted">Seljalandsfoss, Skógafoss & glacier lagoons.</p>
         </div>
         <div class="showcase-card">
           <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1521295121783-8a321d551ad2?w=1200');"></div>
@@ -303,12 +373,13 @@
   </footer>
 
   <script>
-    // year
+    // insert current year
     document.getElementById('year').textContent = new Date().getFullYear();
 
     // smooth scroll for in-page links
     document.querySelectorAll('a[href^="#"], .dest-btn').forEach(function(item){
       item.addEventListener('click', function(e){
+        // dest-btn uses data-target, anchor uses href
         var targetId = this.getAttribute('href') ? this.getAttribute('href').slice(1) : this.dataset.target;
         if(!targetId) return;
         var el = document.getElementById(targetId);
@@ -316,13 +387,11 @@
       });
     });
 
-    // dest-btn highlight effect (add class to body for tiny theme variations if needed)
+    // dest-btn highlight effect
     document.querySelectorAll('.dest-btn').forEach(function(btn){
       btn.addEventListener('click', function(){
-        // simple highlight animation
         document.querySelectorAll('.dest-btn').forEach(b=>b.classList.remove('active'));
         this.classList.add('active');
-        // scroll to target handled by previous listener
       });
     });
   </script>
